# mlife-parser

./: .gitignore  PDMS_Aggregationsübersicht.md  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: build-windows.yml
deidentifier_engine/: __init__.py  anonymizer.py  nlp_engine.py
mlife_core/services/parsers/: all_patient_data.py  fluid_balance.py  patient_info.py
mlife_core/utils/: __init__.py  update_checker.py
ui/: app_state.py
ui/dialogs/: __init__.py  model_help.py
ui/tabs/: anonymize.py
