[project]
name = "mlife-parser"
version = "1.0.0-beta"
description = "Medical Data Pipeline & Export Tool for mLife CSV data"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flet>=0.28.2",
    "openpyxl>=3.1.5",
    "pandas>=2.2.0",
    "pydantic>=2.11.0",
    "rapidfuzz>=3.0.0",
    "presidio-analyzer>=2.2.0",
    "presidio-anonymizer>=2.2.0",
    "spacy>=3.7.0",
]
